# dundefsave

./: Cargo.toml  testout.decomp  tmp.txt
savedata/: DunDefHeroes.dun  README.md  oldsave-decompressed  oldsave.dun  save1-decompressed  save1.dun  save2-decompressed  save2.dun
src/: cli.rs  lib.rs  main.rs  parser.rs
src/crc/: mod.rs  table.rs
src/models/: equipment_save_info.rs  hero_and_equipment.rs  hero_save_info.rs  linear_color.rs  mod.rs  options_info.rs
src/parser/: mod.rs
src/parser/decompressed/: equipment_save_info.rs  hero_and_equipment.rs  hero_save_info.rs  linear_color.rs  mod.rs  options_info.rs
