[package]
name = "dundefsave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
compress = { version = "0.2.1", default-features = false, features = ["zlib"] }
deku = "0.16.0"
eyre = "0.6.8"
